fix account dropdown menu z-index order

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,6 +104,10 @@ input[type="text"] {
     padding-right: 55px;
 }
 
+#top-nav {
+    z-index: 1050;
+}
+
 .dropdown-menu {
     border-radius: revert;
     text-align: right;
